added details and summary

--- a/index.html
+++ b/index.html
@@ -159,38 +159,38 @@
             <div class="container">
                 <h2 class="questions__h2">Ответы на вопросы</h2>
                 <div class="questions__items">
-                    <div class="questions__item">
-                        <h3 class="questions__h3 questions__h3_close">Работаете ли вы по 249 ФЗ?</h3>
+                    <details class="questions__item">
+                        <summary class="questions__h3">Работаете ли вы по 249 ФЗ?</summary>
                         <p class="questions__p">Lorem Ipsum - это текст-"рыба", часто используемый 
                             в печати и вэб-дизайне. Lorem Ipsum является стандартной "рыбой" для текстов 
                             на латинице с начала XVI века. В то время некий безымянный печатник создал 
                             большую коллекцию размеров и форм шрифтов, используя Lorem Ipsum для распечатки 
                             образцов. </p>
-                    </div>
-                    <div class="questions__item">
-                        <h3 class="questions__h3 questions__h3_open">Работаете ли вы по 249 ФЗ?</h3>
+                    </details>
+                    <details class="questions__item">
+                        <summary class="questions__h3">Работаете ли вы по 249 ФЗ?</summary>
                         <p class="questions__p">Lorem Ipsum - это текст-"рыба", часто используемый 
                             в печати и вэб-дизайне. Lorem Ipsum является стандартной "рыбой" для текстов 
                             на латинице с начала XVI века. В то время некий безымянный печатник создал 
                             большую коллекцию размеров и форм шрифтов, используя Lorem Ipsum для распечатки 
                             образцов.  </p>
-                    </div>
-                    <div class="questions__item">
-                        <h3 class="questions__h3 questions__h3_close">Работаете ли вы по 249 ФЗ?</h3>
+                    </details>
+                    <details class="questions__item">
+                        <summary class="questions__h3">Работаете ли вы по 249 ФЗ?</summary>
                         <p class="questions__p">Lorem Ipsum - это текст-"рыба", часто используемый 
                             в печати и вэб-дизайне. Lorem Ipsum является стандартной "рыбой" для текстов 
                             на латинице с начала XVI века. В то время некий безымянный печатник создал 
                             большую коллекцию размеров и форм шрифтов, используя Lorem Ipsum для распечатки 
                             образцов.  </p>
-                    </div>
-                    <div class="questions__item">
-                        <h3 class="questions__h3 questions__h3_close">Работаете ли вы по 249 ФЗ?</h3>
+                    </details>
+                    <details class="questions__item">
+                        <summary class="questions__h3">Работаете ли вы по 249 ФЗ?</summary>
                         <p class="questions__p">Lorem Ipsum - это текст-"рыба", часто используемый 
                             в печати и вэб-дизайне. Lorem Ipsum является стандартной "рыбой" для текстов 
                             на латинице с начала XVI века. В то время некий безымянный печатник создал 
                             большую коллекцию размеров и форм шрифтов, используя Lorem Ipsum для распечатки 
                             образцов.  </p>
-                    </div>
+                    </details>
                 </div>
             </div>
         </section>
